feat: Add webhooks to oas automatically from events
